# ai-usage

./: UI.pen  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 5c24186e-412b-4ccd-8762-b45ae0f1ab9f.json
docs/superpowers/specs/: 2026-04-23-codex-quota-implementation-plan.md  2026-04-23-codex-quota-menubar-design.md  2026-04-24-ui-continuation-summary.md
scripts/: package-app.sh
scripts/ci/: check-version-sync.mjs  read-app-version.mjs
scripts/release/: bump-version.mjs  versioning.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_time.rs  commands.rs  copilot_oauth.rs  errors.rs  git_usage.rs  local_proxy.rs  local_proxy_error.rs  local_proxy_sse.rs  local_proxy_streaming_responses.rs  local_proxy_transform_chat.rs  local_proxy_transform_responses.rs  local_usage.rs  main.rs  models.rs  notifications.rs  oauth.rs  panel.rs  pr_kpi.rs  provider.rs  secrets.rs  settings.rs  state.rs  storage.rs
src/components/ui/: switch.tsx
src/lib/: connected-accounts.ts  copilot-device-copy.ts  copilot-device-polling.ts  git-usage-display.ts  oauth-auth-state.ts  pr-kpi-display.ts  quota-display.ts  tauri.ts  token-usage-display.ts  types.ts  usage-range.ts
tests/: connected-accounts.test.ts  copilot-device-copy.test.ts  copilot-device-polling.test.ts  git-usage-display.test.ts  local-proxy-address-lock.test.ts  local-proxy-routing.test.ts  mock-account-management.test.ts  mock-anthropic-oauth.test.ts  mock-copilot-account.test.ts  mock-glm-account.test.ts  mock-kimi-account.test.ts  mock-launch-at-login.test.ts  mock-minimax-account.test.ts  mock-openai-oauth.test.ts  oauth-auth-state.test.ts  overview-refresh-state.test.ts  pr-kpi-display.test.ts  quota-display.test.ts  release-workflow.test.ts  settings-usage-layout.test.ts  styles-css.test.ts  token-usage-display.test.ts  update-ui.test.ts  usage-range-state.test.ts  version-bump-script.test.ts
