[package]
name = "ai-usage"
version = "0.1.0"
description = "Codex quota menubar app"
authors = ["liujialin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
tauri = { version = "2.9.1", features = ["test", "tray-icon"] }
