[package]
name = "ai-usage"
version = "0.1.0"
description = "Codex quota menubar app"
authors = ["liujialin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["http1", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
hex = "0.4.3"
keyring = { version = "3.6.3", features = ["apple-native"] }
log = "0.4.28"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-notification = "2.3.3"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5.7"
urlencoding = "2.1.3"

[dev-dependencies]
tauri = { version = "2.9.1", features = ["test", "tray-icon"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
